# washd

./: compile_commands.json  meson.build
shared/: meson.build  myerror.c  vector.c
shared/gdbus/: dk.slashwin.washd.xml  meson.build
shared/include/: meson.build  types.h  vector.h
shared/include/gdbus/: dbus.h
shared/include/net/: serialize.h
shared/net/: serialize.c
test/: meson.build
washc/: main.c  meson.build
washd/: main.c  meson.build  parser.c  parser.h
